# work_hours

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: main.py
work_hours/: __init__.py  exception_cn.py  work_hours.py
